--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
         "psr-4": {
             "App\\": "application/class/"
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.12.42"
     }
 }
