--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "twig/twig": "^3.0",
-        "altorouter/altorouter": "^2.0"
+        "altorouter/altorouter": "^2.0",
+        "phpmailer/phpmailer": "^6.1"
     },
     "autoload": {
         "psr-4": {
