--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
+
+    "autoload": {
+        "psr-4": {
+            "App\\": "application/class/"
+        },
+        "files": ["parameter.php.skel"]
+    },
+    
     "require": {
         "twig/twig": "^3.0",
         "altorouter/altorouter": "^2.0",
         "phpmailer/phpmailer": "^6.1"
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "application/class/"
-        }
-    },
+   
     "require-dev": {
         "phpstan/phpstan": "^0.12.42"
     }
