--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "psr-4": {
             "App\\": "application/class/"
         },
-        "files": ["parameter.php.skel"]
+        "files": ["parameter.php"]
     },
     
     "require": {
