--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "twig/twig": "^3.0",
         "altorouter/altorouter": "^2.0",
-        "phpmailer/phpmailer": "^6.1"
+        "phpmailer/phpmailer": "^6.1",
+        "fpdf/fpdf": "^1.82"
     },
    
     "require-dev": {
